# openwolf

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES_2.0.0.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: publish-hermes-plugin.yml
docs/: UPSTREAM-PR.md  commands.md  configuration.md  dashboard.md  getting-started.md  hooks.md  how-it-works.md  reframe.md  troubleshooting.md  updating.md
docs/.vitepress/: config.ts
docs/adr/: ADR-001-multi-agent-runtime.md
scripts/: openwolf-check.mjs
src/agents/: antigravity.ts  claude.ts  cline.ts  codex.ts  cursor.ts  gemini.ts  hermes.ts  index.ts  markers.ts  openclaw.ts  opencode.ts  openwolf-snippet.ts  pi-mono.ts  skills.ts  types.ts
src/agents/hermes/python/: .gitignore  README.md  RELEASE.md  pyproject.toml
src/agents/hermes/python/src/openwolf_hermes/: __init__.py
src/agents/hermes/python/src/openwolf_hermes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/buglog/: bug-tracker.ts
src/cli/: cron-cmd.ts  daemon-cmd.ts  dashboard.ts  index.ts  init.ts  report.ts  update.ts
src/daemon/: cron-engine.ts  file-watcher.ts  wolf-daemon.ts
src/designqc/: designqc-capture.ts
src/hooks/: anatomy-lock.ts  anatomy-store.ts  post-read.ts  post-write.ts  pre-read.ts  precompact.ts  session-start.ts  shared.ts  stop.ts  symbol-extractor.ts
src/scanner/: anatomy-scanner.ts
src/templates/: STATUS.md  config.json  reframe-frameworks.md
tests/: anatomy-lock.test.ts  anatomy-store.test.ts  security.test.ts  symbol-extractor.test.ts  token-measurement.test.ts
(+28 files in other folders)
